2010-10-31  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.c-torture/execute/20101011-1.c: Skip for MIPS unless running
	the Linux kernel.

2010-10-30  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/44917
	PR fortran/44926
	PR fortran/46196
	* gfortran.dg/typebound_generic_10.f03: New.

2010-10-30  Nicola Pero  <nicola.pero@meta-innovation.com>

	Implemented Objective-C 2.0 @property, @synthesize and @dynamic.
	* objc.dg/property/property-neg-1.m: Updated for changes in the
	syntax of @property and the implementation of
	@synthesize/@dynamic.
	* objc.dg/property/property-neg-2.m: Same change.
	* objc.dg/property/property-neg-3.m: Same change.
	* objc.dg/property/property-neg-4.m: Same change.
	* objc.dg/property/property-neg-5.m: Same change.
	* objc.dg/property/property-neg-7.m: Same change.
	* objc.dg/property/property-1.m: Same change.	
	* objc.dg/property/synthesize-1.m: Same change.
	* objc.dg/property/at-property-2.m: Same change.
	* objc.dg/property/at-property-4.m: Same change.

	* objc.dg/property/fsf-property-method-acces.m: Updated for
	changes in the syntax of @property and the implementation of
	@synthesize/@dynamic.  Use the same code for GNU and NeXT runtime.
	* objc.dg/property/fsf-property-basic.m: Same change.
	* objc.dg/property/fsf-property-named-ivar.m: Same change.
	
	* objc.dg/property/at-property-5.m: New.
	* objc.dg/property/at-property-6.m: New.
	* objc.dg/property/at-property-7.m: New.
	* objc.dg/property/at-property-8.m: New.
	* objc.dg/property/at-property-9.m: New.
	* objc.dg/property/at-property-10.m: New.
	* objc.dg/property/at-property-11.m: New.
	* objc.dg/property/synthesize-2.m: New.
	* objc.dg/property/dynamic-2.m: New.

	* obj-c++.dg/property/property-neg-1.mm: Updated for changes in the
	syntax of @property and the implementation of
	@synthesize/@dynamic.
	* obj-c++.dg/property/property-neg-2.mm: Same change.
	* obj-c++.dg/property/property-neg-3.mm: Same change.
	* obj-c++.dg/property/property-neg-4.mm: Same change.