@@ -1,5 +1,5 @@
 // { dg-do run }
-// { dg-require-effective-target tls }
+// { dg-require-effective-target tls_runtime }
 // { dg-add-options tls }
 
 extern void _exit(int);
