@@ -1,5 +1,16 @@
 2010-10-31  Richard Sandiford  <rdsandiford@googlemail.com>
 
+	* gcc.dg/tls/thr-init-1.c: Fix order of dg-do.
+	* gcc.dg/tls/thr-init-2.c: Likewise.  Require tls_runtime rather
+	than tls.
+	* gcc.dg/torture/tls/thr-init-1.c: Require tls_runtime rather than tls.
+	* gcc.dg/torture/tls/thr-init-2.c: Likewise.
+	* objc.dg/torture/tls/thr-init.m: Likewise.
+	* objc.dg/torture/tls/thr-init-2.m: Likewise.
+	* objc.dg/torture/tls/thr-init-3.m: Likewise.
+
+2010-10-31  Richard Sandiford  <rdsandiford@googlemail.com>
+
 	* gcc.c-torture/execute/20101011-1.c: Skip for MIPS unless running
 	the Linux kernel.
 
